fix: text wrap

--- a/useState/src/Components/Task.css
+++ b/useState/src/Components/Task.css
@@ -25,6 +25,7 @@
   text-wrap: wrap;
   text-align: center;
   width: 80%;
+  height: -webkit-fill-available;
 }
 
 .shift-task {
